# radiotray-reborn

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
data/: bookmarks.xml  config.xml  radiotray-reborn.desktop  radiotray.desktop
data/plugins/: autoplay.plugin  editor.plugin  gnome_media_keys.plugin  history.plugin  mate_media_keys.plugin  mpris.plugin  notification.plugin  sleep_timer.plugin  station_switcher.plugin
docs/: index.html
releases/: radiotray-reborn_0.7.5-1_all.deb
src/radiotray/: __init__.py  __main__.py  app.py  constants.py  py.typed  radiotray
src/radiotray/config/: __init__.py  bookmarks.py  settings.py
src/radiotray/core/: __init__.py  mediator.py  player.py  stream_decoder.py
src/radiotray/dbus/: __init__.py  facade.py
src/radiotray/decoders/: __init__.py  asf.py  asx.py  base.py  m3u.py  pls.py  ram.py  xspf.py
src/radiotray/events/: __init__.py  manager.py
src/radiotray/gui/: tray.py
src/radiotray/models/: __init__.py  context.py  url_info.py
src/radiotray/plugins/: __init__.py  base.py  manager.py
src/radiotray/plugins/bundled/: __init__.py  autoplay.py  editor.py  gnome_media_keys.py  history.py  mate_media_keys.py  mpris.py  notification.py  sleep_timer.py  station_switcher.py
src/radiotray/utils/: favicon.py
