[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotray-reborn"
version = "0.7.4"
description = "Online radio streaming player for linux system tray"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "spacedream", email = "plasma4peace@gmail.com"},
]
maintainers = [
    {name = "spacedream", email = "plasma4peace@gmail.com"},
]
keywords = ["radio", "streaming", "audio", "system-tray", "gtk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

dependencies = [
    "PyGObject>=3.42.0",
    "lxml>=4.9.0",
    "requests>=2.28.0",
    "dbus-next>=0.2.2",
    "pyxdg>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
radiotray = "radiotray.__main__:main"

[project.urls]
Homepage = "https://github.com/radiotray/radiotray"
Repository = "https://github.com/radiotray/radiotray"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radiotray = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
